sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:6: error: forward reference extends over definition of variable ecart
			var j = i-ecart
                                  ^