sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
	def tri_insert = {
		for (i <- 1 to getNombreValeurs()-1) {
			var v:Int = getValeur(i)
			var j = i-ecart
			while (j>=0 && getValeur(j)>v) {
			 	setValeur(j+ecart,getValeur(j));
				 j=j-ecart;
			}
			setValeur(j+ecart,v)
		}
	}

	var ecart = getNombreValeurs()
	while (ecart > 1) {tri_insert}
}